# marshall-triangle

./: .README.md.swp  .editorconfig  .gitignore  .replit  CONTRIBUTING.md  LICENSE-CC-BY-4.0  LICENSE-CC-BY-NC-4.0  LICENSE-MIT  README.md  app.py  calibration.json  harmony_index.py  harmony_presets.db  pyproject.toml  refresh_trigger.json  refresh_trigger.py  replit.md  replit.nix  test.sql
apps/marshall-triangle/: .gitignore  LICENSE-PUBLIC.txt  PIL_METADATA.yaml  README.md
apps/marshall-triangle/config/: anchors.json  anchors.p3.json
apps/marshall-triangle/streamlit/: app.py  harmony_index.py  migrate_db.py  pyproject.toml
apps/marshall-triangle/web/: package.json
apps/marshall-triangle/web/app/: globals.css  layout.tsx  page.tsx
attached_assets/: Standardizing_Naming_and_Attribution_for_the_Harmony_Triangle___1767555982386.md  marshall_triangle_canonical_execution_plan_jan_2026_1767555982383.md  semantic_governance_kit_v_1_technical_tool_pattern_marshall_tri_1767555982385.md
marshall-triangle/: LICENSE  LICENSE-CC-BY-NC-4.0  LICENSE-MIT  README.md  app.py  harmony_index.py
marshall-triangle-visualization/: LICENSE  README.md  harmony_index.py  requirements.txt
marshall-triangle-visualization/docs/: TECHNICAL.md
temp-repo/: .gitignore  API.md  INSTALL.md  MIGRATION.md  README.md  calibration.json  refresh_trigger.json
temp-repo/.streamlit/: config.toml
web/: LICENSE-MIT  README.md  package.json  tailwind.config.js  vercel.json
web/app/: page.tsx
web/app/api/color/: route.ts
web/docs/: README-dev.md
web/lib/math/: barycentric.ts
(+3 files in other folders)
